fix: prevented overflow in mobile screens

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ p {
   bottom: 0.5em;
   font-size: 11px;
   text-align: center;
-  width: 100%;
+  width: 97%;
 }
 
 .attribution a {
